--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,11 @@
 }
 
 body {
+	display: flex;
+	flex-direction: column;
+	align-content: space-between;
 	width: 100%;
+	min-height: 100vh;
 	background-color: #3772FF;
 	font-family: 'Poppins';
 	font-weight: 400;
@@ -45,6 +49,7 @@ body {
 .header > a {
 	width: 50px;
 	text-align: center;
+	margin-left: 50px;
 }
 
 .main_title {
@@ -57,6 +62,7 @@ body {
 .main_content {
 	text-align: center;
 	width: 248px;
+	max-width: 488px;
 	padding: ;
 	margin: auto;
 }
@@ -86,11 +92,19 @@ body {
 	transform: translateY(30px);
 }
 
-.footer {
-	position: relative;
-	z-index: 3;
-	text-align: center;
+footer {
 	width: 100%;
+	text-align: center;
+}
+
+footer > img {
+	position: relative;
+	z-index: 1;
+}
+
+footer > p {
+	position: relative;
+	z-index: 2;
 	padding: 43px 0px;
 	background-color: #36D6AD;
 }
