--- a/css/animallist.css
+++ b/css/animallist.css
@@ -1,21 +1,10 @@
-body {
-	background-color: white;
-	color: #3772FF;
+.main-container{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
 }
 
-.usuario_link {
-	position: absolute;
-	right: 10%;
-	top: 50%;
-	transform: translateY(-50%);
-}
-
-.main_content {
-	margin-bottom: 32px;
-	width: 100%;
-}
-
-.animal_container {
+.animal {
 	display: flex;
 	align-items: center;
 	width: 360px;
@@ -23,25 +12,24 @@ body {
 	margin: 0px auto 16px auto;
 	list-style: none;
 	padding: 0px 16px 0px 24px;
-	background-color: #F6F6F6;
 }
 
-.animal_information {
+.animal__information {
 	margin-left: 16px;
 }
 
-.animal_information h2 {
+.animal__nome {
 	font-weight: 600;
 	font-size: 16px;
 	line-height: 20px;
 	margin-bottom: 8px;
 }
 
-.animal_information ul {
+.lista-descricao {
 	margin-bottom: 30px;
 }
 
-.animal_information  ul  li {
+.lista-descricao__item {
 	list-style: none;
 	font-weight: 400;
 	font-size: 14px;
@@ -49,7 +37,7 @@ body {
 	color: #737380;
 }
 
-.animal_information p {
+.animal__cidade {
 	font-weight: 400;
 	font-size: 12px;
 	line-height: 16px;
@@ -57,13 +45,13 @@ body {
 	margin-bottom: 8px;
 }
 
-.animal_information a {
+.animal__link {
 	display: flex;
 	align-items: flex-start;
 	text-decoration: none;
 }
 
-.animal_information a p {
+.animal__link--text {
 	font-weight: 400;
 	font-size: 10px;
 	line-height: 16px;
