--- a/css/forms.css
+++ b/css/forms.css
@@ -1,73 +1,104 @@
-body {
-	background-color: white;
-	color: #3772FF;
-}
-
-.main_content {
-	width: 312px;
-}
-
-.main_content h1,p{
-	font-size: 16px;
-	line-height: 21px;
-	font-weight: normal;
-}
-
-.main_content h1 {
-	margin-bottom: 8px;
-}
-
-
-.main_form {
-	text-align: center;
+.main-form {
 	position: relative;
+	text-align: center;
 	z-index: 2;
-
 }
 
-.main_form > label {
-	display: block;
+.main-form--msgpage {
+	margin: 56px auto 48px auto;
+}
+
+.main-form--perfil-title{
 	color: #737380;
+	font-size: 21px;
+	font-weight: 600;
+	line-height: 24px;
+}
+/* ################## Labels ########################*/
+
+.main-form__label {
+	color: #737380;
+	display: block;
+	line-height: 24px;
+	margin: 20px auto 4px auto;
+}
+
+.main-form__label--msgpage {
+	color: #3772FF;
+	font-weight: 600;
+	margin: 20px auto 8px auto;
+	text-align: left;
+	width: 280px;
+}
+
+.main-form__label--mensagem {
+	color: #737380;
+	display: block;
 	line-height: 24px;
 	margin: 20px 0px 4px 0px;
 }
 
-.main_form > input {
-	display: inline-block;
+.main-form__label--foto {
+	display: block;
+    height: 80px;
+    width: 80px;
+    object-fit: cover;
+    object-position: center;
+	margin: auto;
+}
+
+.main-form__label--editar{
+	font-size: 12px;
+	font-weight: 400;
+	color: #FC7071;
 	text-align: center;
+}
+/* ################## Inputs ########################*/
+
+.main-form__input {
+	border: none;
+	border-radius: 6px;
+	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.15);
+	display: inline-block;
 	font-family: inherit;
 	font-size: 12px;
 	line-height: 16px;
-	border: none;
-	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.15);
-	border-radius: 6px;
-	width: 312px;
+	text-align: center;
 	padding: 12px 0px;
-
+	width: 312px;
 }
 
-.main_form > input::placeholder {
-	font-family: 'Poppins';
+.main-form__input--mensagem {
+	height: 172px;
+	resize: none;
+}
+
+.main-form__input--msgpage {
+	padding-left: 16px;
+	text-align: left;
+	width: 280px;
+}
+
+.main-form__input::placeholder {
+	font-family: 'Poppins', sans-serif;
 	font-size: 12px;
 	color: #BCBCBC;
 }
 
-.esqueci_senha {
+.main-form__input--msgpage::placeholder {
+	font-size: 14px;
+}
+
+.main-form__input--foto {
+	display: none;
+}
+
+/* ############################ esqueci senha ############################### */
+
+.esqueci-senha {
 	display: block;
 	font-size: 12px;
 	line-height: 24px;
 	color: #FC7071;
 	margin-top: 8px;
-}
-
-.main_form > .main_btn {
-	margin: 24px auto 105px auto;
-}
-
-.margin_login h1 {
-	margin: 50px 0px 42px 0px;
-}
-
-.margin_login .logo {
-	margin: 0px;
 }
